# linkedin_copilot

./: README.md  app.py  pyproject.toml  requirements.txt
src/linkedin_copilot/: crew.py  main.py
src/linkedin_copilot/config/: agents.yaml  tasks.yaml
src/linkedin_copilot/tools/: __init__.py  custom_tool.py
