[project]
name = "linkedin_copilot"
version = "0.1.0"
description = "linkedin-copilot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "pysqlite3-binary == 0.5.4"
]

[project.scripts]
linkedin_copilot = "linkedin_copilot.main:run"
run_crew = "linkedin_copilot.main:run"
train = "linkedin_copilot.main:train"
replay = "linkedin_copilot.main:replay"
test = "linkedin_copilot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
